# ssss

./: README.md  pyproject.toml
src/ssss/: main.py
