[tool.poetry]
name = "ssss"
version = "0.1.0"
description = "Steve's Static Site Sculptor"
authors = ["Steve McKay <steve@b.abbies.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
GitPython = "^3.1.29"
marko = "^1.2.2"
Jinja2 = "^3.1.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.982"

[tool.poetry.scripts]
ssss = 'ssss.main:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
